--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
+    "precommit": "lint-staged && yarn prettier:check && yarn test",
+    "prepush": "yarn test",
+    "eslint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "eslint:fix": "yarn eslint:check -- --fix",
+    "lint": "yarn eslint:check && yarn prettier:check",
     "build": "nest build",
     "clean": "concurrently \"rimraf dist\" \"rimraf node_modules\"",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "prettier:check": "prettier --check ./**/*.{ts,js,json,yml}",
     "prettier:write": "prettier --write ./**/*.{ts,js,json,yml}",
+    "prepare": "husky install",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -50,7 +54,9 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "^28.1.0",
+    "lint-staged": "^12.4.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
