--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Lint
         run: yarn lint
       - name: Prettier
-        run: npm run prettier:check
+        run: yarn prettier:check
       - name: Build
         run: yarn build
       - name: Test
