--- a/package.json
+++ b/package.json
@@ -66,21 +66,8 @@
     "tsconfig-paths": "^4.0.0",
     "typescript": "^4.3.5"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+  "engines": {
+    "npm": "please-use-yarn",
+    "yarn": ">=1.13.0"
   }
 }
