Add prisma support

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 APP_PORT=8080
 APP_LOGLEVEL='debug'
+
+DATABASE_NAME=hashit
+DATABASE_USER=hashit
+DATABASE_PASS=hashit
+DATABASE_PORT=5432
+DATABASE_URL="postgresql://hashit:hashit@localhost:5432/hashit?schema=public"
