--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "hashit-backend",
   "version": "0.0.1",
-  "description": "hashit-news backend",
+  "description": "hashit-backend",
   "author": "Albin Ma",
   "private": true,
   "license": "MIT",
@@ -32,6 +32,7 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.14.0",
     "nestjs-pino": "^2.6.0",
     "pino-http": "^7.0.0",
     "pino-pretty": "^7.6.1",
@@ -58,6 +59,7 @@
     "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.3.2",
+    "prisma": "^3.14.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.2",
