--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.14.0",
     "nestjs-pino": "^2.6.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "pino-http": "^7.0.0",
     "pino-pretty": "^7.6.1",
     "reflect-metadata": "^0.1.13",
@@ -48,6 +52,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
