--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
 APP_PORT=8080
-APP_LOGLEVEL='debug'
+APP_LOGLEVEL="debug"
+
+SEED_USER_EMAIL="admin@hashit.news"
+SEED_USER_PASSWORD="admin"
 
 DATABASE_NAME=hashit
 DATABASE_USER=hashit
 DATABASE_PASS=hashit
 DATABASE_PORT=5432
 DATABASE_URL="postgresql://hashit:hashit@localhost:5432/hashit?schema=public"
+
