--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.14.0",
+    "dotenv": "^16.0.1",
     "nestjs-pino": "^2.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -77,5 +78,8 @@
   "engines": {
     "npm": "please-use-yarn",
     "yarn": ">=1.13.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
