--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "nestjs-pino": "^2.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pino-http": "^7.0.0",
-    "pino-pretty": "^7.6.1",
+    "pino-pretty": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -51,10 +52,11 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^28.1.0",
     "@types/node": "^17.0.35",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -64,7 +66,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.0",
     "jest": "^28.1.0",
-    "lint-staged": "^12.4.1",
+    "lint-staged": "^13.0.0",
     "prettier": "^2.3.2",
     "prisma": "^3.14.0",
     "source-map-support": "^0.5.20",
