Add local admin auth

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_PORT=8080
 APP_LOGLEVEL="debug"
 
-SEED_USER_EMAIL="admin@hashit.news"
-SEED_USER_PASSWORD="admin"
+SEED_ADMIN_USER_ID="cl3pelamf0000pes46cyjmlm0"
+SEED_ADMIN_USERNAME="admin"
+SEED_ADMIN_PASSWORD="admin"
 
 DATABASE_NAME=hashit
 DATABASE_USER=hashit
