--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/platform-express": "^8.4.7",
     "@prisma/client": "^3.15.2",
     "dotenv": "^16.0.1",
+    "ethers": "^5.6.9",
+    "nanoid": "^4.0.0",
     "nestjs-pino": "^2.6.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -47,7 +49,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.7",
+    "@nestjs/cli": "^8.2.8",
     "@nestjs/config": "^2.1.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.4.7",
@@ -66,7 +68,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.0",
     "jest": "^28.1.1",
-    "lint-staged": "^13.0.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prisma": "^3.15.2",
     "source-map-support": "^0.5.20",
