chore: simplify yarn commands

--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "precommit": "lint-staged && yarn prettier:check && yarn test",
-    "prepush": "yarn test",
+    "prepush": "lint-staged && yarn format:check && yarn test",
+    "format": "yarn eslint:fix && yarn prettier:fix",
+    "format:check": "yarn eslint:check && yarn prettier:check",
     "eslint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "eslint:fix": "yarn eslint:check -- --fix",
-    "lint": "yarn eslint:check && yarn prettier:check",
+    "eslint:fix": "yarn eslint:check --fix",
+    "prettier:check": "prettier --check ./**/*.{ts,js,json,yml}",
+    "prettier:fix": "prettier --write ./**/*.{ts,js,json,yml}",
     "build": "nest build",
     "clean": "concurrently \"rimraf dist\" \"rimraf node_modules\" \"rimraf coverage\"",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "prettier:check": "prettier --check ./**/*.{ts,js,json,yml}",
-    "prettier:write": "prettier --write ./**/*.{ts,js,json,yml}",
     "prepare": "husky install",
     "start": "nest start",
     "start:dev": "nest start --watch",
