--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,4 +1,4 @@
 {
-  "{src,apps,libs,test}/**/*.ts": ["eslint --fix"],
-  "./**/*.{ts,js,json,*rc}": ["prettier --write"]
+  "{src,apps,libs,test}/**/*.ts": ["yarn format"],
+  "./**/*.{ts,js,json,*rc}": ["yarn format"]
 }
