--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.7",
     "@prisma/client": "^4.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
     "nanoid": "^4.0.0",
