--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "nestjs-pino": "^2.6.0",
     "passport": "^0.6.0",
@@ -58,6 +59,7 @@
     "@nestjs/testing": "^8.4.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.4",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.0.0",
     "@types/passport": "^1.0.9",
     "@types/passport-jwt": "^3.0.6",
