Fix envs and ci

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 APP_PORT=8080
 APP_LOGLEVEL="debug"
 
-AUTH_JWT_DEFAULT_EXPIRY="1h"
+AUTH_JWT_DEFAULT_EXPIRY_SECS=900 #15 minutes
 AUTH_JWT_PRIVATE_KEY_FILE="./private.key"
 AUTH_JWT_PUBLIC_KEY_FILE="./public.key"
 AUTH_JWT_ISSUER="hashit"
+AUTH_JWT_REFRESH_TOKEN_EXPIRY=604800 #1 week
 
 SEED_ADMIN_USER_ID="cl3pelamf0000pes46cyjmlm0"
 SEED_ADMIN_USERNAME="admin"
