--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "pino-pretty": "^8.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.8",
@@ -65,6 +66,7 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
+    "@types/underscore": "^1.11.4",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
     "concurrently": "^7.2.2",
