Change precommit hook to just build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "precommit": "lint-staged",
-    "prepush": "yarn test",
+    "prepush": "yarn build",
     "format": "yarn eslint:fix && yarn prettier:fix",
     "format:check": "yarn eslint:check && yarn prettier:check",
     "eslint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
