--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: CI
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -18,6 +19,8 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3
+      - name: Start docker
+        run: docker-compose up -d
       - name: Cache node modules
         uses: actions/cache@v3
         with:
@@ -39,3 +42,8 @@ jobs:
         run: yarn build
       - name: Test
         run: yarn test
+      - name: Test e2e
+        run: |
+          yarn prisma migrate dev
+          yarn prisma db seed
+          yarn test:e2e
