--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
 APP_PORT=8080
-APP_LOGLEVEL='debug'
+APP_LOGLEVEL="debug"
 
-DATABASE_NAME=hashit
-DATABASE_USER=hashit
-DATABASE_PASS=hashit
+AUTH_JWT_DEFAULT_EXPIRY_SECS=900 #15 minutes
+AUTH_JWT_PRIVATE_KEY_FILE="./private.key"
+AUTH_JWT_PUBLIC_KEY_FILE="./public.key"
+AUTH_JWT_ISSUER="hashit"
+AUTH_JWT_REFRESH_TOKEN_EXPIRY=604800 #1 week
+
+SEED_ADMIN_USER_ID="cl3pelamf0000pes46cyjmlm0"
+SEED_ADMIN_USERNAME="admin"
+SEED_ADMIN_PASSWORD="admin"
+
+DATABASE_NAME="hashit"
+DATABASE_USER="hashit"
+DATABASE_PASS="hashit"
 DATABASE_PORT=5432
 DATABASE_URL="postgresql://hashit:hashit@localhost:5432/hashit?schema=public"
+
