--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
-    "precommit": "lint-staged && yarn prettier:check && yarn test",
-    "prepush": "yarn test",
+    "precommit": "lint-staged",
+    "prepush": "yarn build",
+    "format": "yarn eslint:fix && yarn prettier:fix",
+    "format:check": "yarn eslint:check && yarn prettier:check",
     "eslint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
-    "eslint:fix": "yarn eslint:check -- --fix",
-    "lint": "yarn eslint:check && yarn prettier:check",
+    "eslint:fix": "yarn eslint:check --fix",
+    "prettier:check": "prettier --check ./**/*.{ts,js,json,yml}",
+    "prettier:fix": "prettier --write ./**/*.{ts,js,json,yml}",
+    "compile": "tsc",
     "build": "nest build",
     "clean": "concurrently \"rimraf dist\" \"rimraf node_modules\" \"rimraf coverage\"",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "prettier:check": "prettier --check ./**/*.{ts,js,json,yml}",
-    "prettier:write": "prettier --write ./**/*.{ts,js,json,yml}",
     "prepare": "husky install",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -29,47 +30,67 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "^3.14.0",
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/core": "^8.4.7",
+    "@nestjs/jwt": "^8.0.1",
+    "@nestjs/passport": "^8.2.2",
+    "@nestjs/platform-express": "^8.4.7",
+    "@prisma/client": "^4.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
+    "ethers": "^5.6.9",
+    "moment": "^2.29.4",
+    "nanoid": "^4.0.0",
     "nestjs-pino": "^2.6.0",
-    "pino-http": "^7.0.0",
-    "pino-pretty": "^7.6.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "pino-http": "^8.1.0",
+    "pino-pretty": "^8.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/config": "^2.0.1",
+    "@nestjs/cli": "^8.2.8",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.4.7",
     "@types/express": "^4.17.13",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.35",
+    "@types/jest": "^28.1.4",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^18.0.0",
+    "@types/passport": "^1.0.9",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "concurrently": "^7.2.0",
-    "eslint": "^8.0.1",
+    "@types/underscore": "^1.11.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "concurrently": "^7.2.2",
+    "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.0",
-    "jest": "^28.1.0",
-    "lint-staged": "^12.4.1",
-    "prettier": "^2.3.2",
-    "prisma": "^3.14.0",
+    "jest": "^28.1.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "prisma": "^4.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "^28.0.2",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-jest": "^28.0.5",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.8.1",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.7.4"
   },
   "engines": {
     "npm": "please-use-yarn",
     "yarn": ">=1.13.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
