--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/swagger": "^6.0.4",
     "@prisma/client": "^4.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
