--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "@nestjs/platform-express": "^8.4.7",
     "@nestjs/swagger": "^6.0.4",
     "@prisma/client": "^4.0.0",
+    "@types/cuid": "^2.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cuid": "^2.1.8",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.9",
+    "helmet": "^5.1.0",
     "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "nestjs-pino": "^2.6.0",
